# PhotoShoop

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/web/: index.html  mod.rs  slides.js  styles.css
src/webpage/: index.html  mod.rs  slides.js
